# frisk

./: .gitignore  .lintr  CMakeLists.txt  README.md
RcppElNet/: DESCRIPTION  NAMESPACE
RcppElNet/R/: export.R
RcppElNet/demo/: demo.R
RcppElNet/man/: RcppElNet-package.Rd  fit_model.Rd  model_predict.Rd
RcppElNet/src/: Makevars  my_elnet.cpp
include/common/: chkvars.h  driver_gaussian.h  elnet.h  exceptions.h  functional.h  standardize.h  type_traits.h  types.h
include/common/iterator/: counting_iterator.h  one_to_zero_iterator.h
include/common/path/: path_base.h  path_decl.h  path_gaussian_base.h  path_gaussian_cov.h  path_gaussian_naive.h
include/common/point/: point_base.h  point_decl.h  point_gaussian_base.h  point_gaussian_cov.h  point_gaussian_naive.h  point_traits.h
include/common/point/internal/: pi_base.h  pi_decl.h  pi_gaussian_base.h  pi_gaussian_cov.h  pi_gaussian_naive.h
python/: CMakeLists.txt  PyElNet.cpp  test.py  test1.py
scripts/python/: elnet_torch.py  lr_torch.py  test0.ipynb  test1.ipynb  test1.py  test2.py
scripts/r/: test0.R  test1.R
src/c_api/: CMakeLists.txt  entry.cpp
src/common/: CMakeLists.txt  elnet.cpp
src/common/path/: path_gaussian_naive.cpp
src/common/point/: point_gaussian_naive.cpp
src/common/point/internal/: pi_gaussian_naive.cpp
src/play/: CMakeLists.txt  play_cov.cpp  play_eigen.cpp  play_naive.cpp
